Add Cloudflare Images background removal integration

--- a/index.html
+++ b/index.html
@@ -1054,6 +1054,7 @@
                 <button id="loadProject" title="Load Project" class="tbtn" aria-label="Load Project">
                     <span class="label-long">Load Project</span><span class="label-short">Load</span>
                 </button>
+                <button id="removeBgClientTop" class="tbtn" title="Remove background using server">Remove BG</button>
                 <button id="saveProjectTop" class="tbtn" title="Save Project" aria-label="Save Project">
                     <span class="label-long">Save Project</span><span class="label-short">Save</span>
                 </button>
