--- a/index.html
+++ b/index.html
@@ -6486,6 +6486,9 @@
 
     <script src="js/project-manager.js?v=20250912113000"></script>
     <script src="js/tag-manager.js?v=20250912113000"></script>
+    <!-- Natural Language Tagging System -->
+    <script src="js/nlTagParser.js?v=20251116210000"></script>
+    <script src="js/nlTagUI.js?v=20251116210000"></script>
 
     <!-- Minimal Numeric Pill Strip Implementation -->
     <script>
