some vite fixes

--- a/index.html
+++ b/index.html
@@ -7884,9 +7884,9 @@
       })();
     </script>
     <!-- New coordinate system scripts -->
-    <script src="js/transform.js?v=20250820123456"></script>
-    <script src="js/geometry.js?v=20250820123456"></script>
-    <script src="js/migration.js?v=20250820123456"></script>
+    <script type="module" src="/js/transform.js?v=20250820123456"></script>
+    <script type="module" src="/js/geometry.js?v=20250820123456"></script>
+    <script type="module" src="/js/migration.js?v=20250820123456"></script>
 
     <!-- Load AI Export Module before paint.js -->
     <script type="module">
@@ -7926,20 +7926,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
 
     <!-- Extracted UI Modules (MUST load in this order - see EXTRACTION_SUMMARY.md) -->
-    <script src="js/toolbar-layout.js"></script>
-    <script src="js/frame-capture-visibility.js"></script>
-    <script src="js/toolbar-init.js"></script>
-    <script src="js/smart-labels.js"></script>
-    <script src="js/panel-management.js"></script>
-    <script src="js/tag-system.js"></script>
-    <script src="js/capture-frame.js"></script>
-    <script src="js/image-gallery.js"></script>
-    <script src="js/scroll-select-system.js"></script>
-    <script src="js/mini-stepper.js"></script>
-    <script src="js/status-message.js"></script>
+    <script type="module" src="/js/toolbar-layout.js"></script>
+    <script type="module" src="/js/frame-capture-visibility.js"></script>
+    <script type="module" src="/js/toolbar-init.js"></script>
+    <script type="module" src="/js/smart-labels.js"></script>
+    <script type="module" src="/js/panel-management.js"></script>
+    <script type="module" src="/js/tag-system.js"></script>
+    <script type="module" src="/js/capture-frame.js"></script>
+    <script type="module" src="/js/image-gallery.js"></script>
+    <script type="module" src="/js/scroll-select-system.js"></script>
+    <script type="module" src="/js/mini-stepper.js"></script>
+    <script type="module" src="/js/status-message.js"></script>
 
     <!-- New Modules -->
-    <!-- <script type="module" src="js/modules/main.js"></script> -->
+    <!-- <script type="module" src="/js/modules/main.js"></script> -->
 
     <!-- TypeScript Bridge (Migration) -->
     <!-- <script type="module" src="/js/typescript-bridge.js"></script> -->
